<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.LoginFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:minWidth="100dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btn_telephone"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/send_telephone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/code"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:minWidth="100dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btn_code"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/send_code" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:minWidth="100dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btn_login"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/send_password" />

</androidx.appcompat.widget.LinearLayoutCompat>
